 Total files count:    
 Total lines count: 

 New features and improvements:

   Recurrent DB Model v9

   - ClosingParms: improve account check (todo #513).
   - EntryPage: have an extended filter (todo #733).
   - EntryPage: may be opened several times.
   - Improve error messages when entering an operation (todo #1356).
   - Display conciliation group from an entry or a BAT line (todo #1372).

 Bug fixes:

   - myIDialog: fix focus issue when running 'maybe_non_modal()' (todo #1355).
   - myIGridlist: fix behavior when there is no header (todo #1373).
   - ofaAccountTreeview: fix background color of pixbuf cells (todo #442).
   - Recurrent: fix periodicity details count.

 Other changes:

   - my_casefold(): new function.
   - myIGridList: has new 'my-row-changed' signal (todo #1371).
   - my_igridlist_add_row(): add user data argument.
   - my_igridlist_get_rows_count(): renamed to my_igridlist_get_details_count().
   - my_igridlist_remove_row(): new function.
   - my_igridlist_set_has_row_number(): new function.
   - my_igridlist_set_has_up_down_buttons: new function.
   - myIWindow: set_restore_position() and set_restore_size() are replaced by set_manage_geometry().
   - myIWindow: set_close_allowed() is renamed to set_allow_close().
   - myIWindow: get_identifier() method is replaced by set_identifier() function.
   - my_stamp_compare(): new function.
   - ofaClosingParmsBin: implements myIGridlist interface (todo #1370).
   - ofa_itvcolumnable_enable_column(): renamed to ofa_itvcolumnable_set_invisible().
   - ofa_itvcolumnable_get_column_type(): new function.
   - ofa_itvcolumnable_get_menu_label(): new function.
   - ofaReconcilGroup: new class.
   - ofo_entry_get_abr_from_status(): new function.
   - Periodicity properties: review UI margins (todo #1366).

-----------------------------------------------------------------------
 Version 0.67
 ============

 Released on 2017-02-21

 Total files count:    790
 Total lines count: 524542
