@@ -27,6 +27,7 @@
    - EntryPage: may be opened several times.
    - Improve error messages when entering an operation (todo #1356).
    - Display conciliation group from an entry or a BAT line (todo #1372).
+   - Review the window geometry management (todo #1285).
 
  Bug fixes:
 
